--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ img:hover {
 }
 
 img {
-	width: 186px;
+	width: 168px;
 }
 
 button {
@@ -67,12 +67,33 @@ button {
 
 @media (max-width: 768px) {
 	ul {
-    width: 544px;
+    width: 350px;
+	padding: 0px;
+	justify-content: space-evenly;
     flex-wrap: wrap;
-    align-items: unset;
-    justify-content: left;
     flex-direction: row;
+	align-items: center;
 	}
+
+	li {
+		display: flex;
+		margin: 0px;
+		flex-direction: column;
+	}
+
+	figure {
+		margin: 0px;
+	}
+
+	img {
+		width: 117px;
+	}
+
+	.addPerfil {
+		width: 117px;
+		height: 181px;
+	}
+
 	.topo {
 		text-align: center;
 	}
