--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 		background-color: #00002e;
 		color: white;
 		font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+		display: inline;
 	}
 
 
@@ -33,6 +34,11 @@ SUGESTÃO DE ESTRUTURAÇÃO BASE
 
 h2, h3, footer {
 	text-align: center;
+}
+
+h3 {
+	margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 ul {
